名前を変更

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "eframe_template"
+name = "mochi_browser"
 version = "0.1.0"
-authors = ["Emil Ernerfeldt <emil.ernerfeldt@gmail.com>"]
+authors = ["mochi-sann <>"]
 edition = "2024"
 include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
 rust-version = "1.88"
@@ -28,11 +28,15 @@ serde = { version = "1.0.219", features = ["derive"] }
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 env_logger = "0.11.8"
+reqwest = { version = "0.12", features = ["json", "blocking"] }
+tokio = { version = "1.0", features = ["full"] }
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
+wasm-bindgen = "0.2"
 web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
+js-sys = "0.3"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
