--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ tokio = { version = "1.0", features = ["full"] }
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
 wasm-bindgen = "0.2"
-web-sys = "0.3.70"              # to access the DOM (to hide the loading text)
+web-sys = { version = "0.3.70", features = ["Request", "RequestInit", "RequestMode", "Response", "Window"] }
 js-sys = "0.3"
 
 [profile.release]
