--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,9 +34,7 @@ tokio = { version = "1.0", features = ["full"] }
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen-futures = "0.4.50"
-wasm-bindgen = "0.2"
-web-sys = { version = "0.3.70", features = ["Request", "RequestInit", "RequestMode", "Response", "Window"] }
-js-sys = "0.3"
+web-sys = "0.3.70"
 
 [profile.release]
 opt-level = 2 # fast and small wasm
