--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,9 @@ tokio = { version = "1.0", features = ["full"] }
 wasm-bindgen-futures = "0.4.50"
 web-sys = "0.3.70"
 
+[dev-dependencies]
+serde_json = "1.0"
+
 [profile.release]
 opt-level = 2 # fast and small wasm
 
