--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -138,6 +138,10 @@ jobs:
         target: ${{ matrix.TARGET }}
         override: true
 
+    - name: Install OpenSSL (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      run: sudo apt-get update && sudo apt-get install -y libssl-dev pkg-config
+
     - uses: actions-rs/cargo@v1
       with:
         use-cross: true
